[package]
name = "osu-microapi"
version = "0.4.0"
edition = "2021"

[profile.ci]
inherits = "release"
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
strip = "symbols"

[dependencies]
isahc = "1.7.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tiny_http = "0.9.0"
